workloads/medium-place/authentik/authentik/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: authentik
  namespace: medium-place
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/version: 2022.7.2

spec:
  selector:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik

  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: http
    - name: https
      protocol: TCP
      port: 9443
      targetPort: https
