workloads/medium-place/authentik/authentik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: authentik
  namespace: medium-place
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/part-of: authentik

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - auth.medium.place
      secretName: auth.medium.place-tls

  rules:
    - host: auth.medium.place
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: authentik
                port:
                  name: http
